# Client_Server

./: CMakeLists.txt  main.cpp
Serv/: Buffer.h  Message_handler.cpp  Message_handler.h  Serv_tcp_reader.h
client/: CMakeLists.txt  main.cpp
include/: Protocol_communication.h  Protocol_pak.cpp  Protocol_pak.h
server/: CMakeLists.txt  Serv_tcp_reader.h  main.cpp
